# soothe-client-python

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_hello.py  02_stream_turn.py  03_text_completion.py  04_multi_turn.py  05_pool_service.py  06_jobs.py  README.md  _common.py
examples/appkit/: test_appkit_examples.py
src/soothe_client/: __init__.py  command_client.py  errors.py  helpers.py  intent_hints.py  protocol_params.py  schemas.py  session.py  stream_terminal.py  turn_boundary.py  websocket.py  ws_command_client.py
src/soothe_client/appkit/: __init__.py  attachments.py  broadcaster.py  chunk_filter.py  classifier.py  daemon_session.py  events.py  managed_client.py  observability.py  pool.py  query_gate.py  session_store.py  thinking_step.py  turn.py  turn_boundary.py  turn_runner.py
tests/: conftest.py
tests/integration/: README.md  _helpers.py  conftest.py  test_appkit_pool.py  test_connection.py  test_daemon_session.py  test_helpers.py  test_jobs.py  test_loops.py
tests/unit/: test_helpers_daemon_live.py  test_public_api.py  test_session_bootstrap.py  test_session_bootstrap_reconnect.py  test_websocket_daemon_status.py  test_websocket_priority_drop.py
tests/unit/appkit/: test_appkit.py  test_classifier_broadcaster.py  test_daemon_session.py  test_managed_client_wire.py  test_pool_turn_runner.py  test_turn_lifecycle.py
tests/unit/client/: test_command_client.py  test_event_batch.py  test_intent_hints.py  test_intent_hints_phases.py  test_protocol1_rpc_helper.py  test_protocol_params.py  test_stream_terminal.py  test_turn_boundary.py  test_websocket_connection.py  test_websocket_handshake.py  test_websocket_invoke_skill.py  test_websocket_protocol1.py  test_websocket_send_input.py  test_ws_command_client.py
