[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soothe-client-python"
dynamic = ["version"]
description = "WebSocket client + appkit for soothe-daemon (Python)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
keywords = ["soothe", "client", "websocket", "agents", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "soothe-sdk>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "websockets>=12.0",
    "pillow>=10.0.0,<12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mirasoth/soothe-client-python"
Documentation = "https://soothe.readthedocs.io"
Repository = "https://github.com/mirasoth/soothe-client-python"

[tool.hatch.build.targets.wheel]
packages = ["src/soothe_client"]

[tool.hatch.build.targets.sdist]
include = ["src/soothe_client/"]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["soothe_client"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["soothe_sdk", "soothe_sdk.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "examples/appkit"]
addopts = "--import-mode=importlib"
markers = [
    "integration: live soothe-daemon tests (skipped when unreachable)",
]
